--- a/index.html
+++ b/index.html
@@ -5,70 +5,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>2024 신년계획 버킷리스트</title>
-
   <style>
-    .bg {
-      background-image: url("./Sparthon_BG.png");
-      background-size: cover;
-      background-repeat: no-repeat;
-      margin: 0 auto;
-      background-color: #141617;
-    }
 
-    .title {
-      margin-top: 50px;
-      color: #E8344E;
-    }
-
-    .msg {
-      color: white;
-      margin-bottom: 48px;
-    }
-
-    .bucket {
-      width: 160px;
-      height: 160px;
-      background-size: cover;
-      background-position: center;
-    }
-
-    .img1 {
-      background-image: url("./Bucket01.png");
-      color: white;
-    }
-
-    .img2 {
-      background-image: url("./Bucket02.png");
-      color: #E8344E;
-    }
-
-    .img3 {
-      background-image: url("./Bucket03.png");
-      color: #E8344E;
-    }
-
-    .img4 {
-      background-image: url("./Bucket04.png");
-      color: white;
-    }
-
-    .img5 {
-      background-image: url("./Bucket05.png");
-      color: white;
-    }
-
-    .img6 {
-      background-image: url("./Bucket06.png");
-      color: #E8344E;
-    }
   </style>
-
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+
 <body class="bg">
+
   <h1 class="title">SPARTHON Bucket List</h1>
   <p class="msg">꿈은 꾸는 것이 아닌, 이루는 것이다!</p>
+
+
+  <div class="search">
+    <input type="text" id="userInput" placeholder="Enter some text" />
+    <button onclick="addBucket()">Save</button>
+    <p id="demo"></p>
+  </div>
+
+  <script>
+    function addBucket() {
+      document.getElementById("demo").innerHTML = "아이고 여기까지밖에 못하겠다!";
+    }</script>
+
   <div class="flex-row wrap">
     <div class="bucket img1 center">안드로이드 개발자로 취뽀하기</div>
     <div class="bucket img2 center">Kotlin 백엔드 개론서 훑어보기</div>
@@ -106,6 +66,11 @@
       });
     });
   </script>
+
+  <figure>
+    <audio controls disableRemotePlayback src="/bgm.mp3">브라우저가 오디오를 지원하지 않습니다.</audio>
+
+  </figure>
 
 </body>
 
